--- a/style.css
+++ b/style.css
@@ -22,12 +22,27 @@ main {
   padding-top: 20px;
   font-size: 27px;
   background-image: linear-gradient(to top, brown, orange);
+  display: flex;
 }
 
 ol {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.counter {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  color: antiquewhite;
+  background-color: rgb(44, 44, 44);
+  border: solid 3px black;
+  border-radius: 8px;
+  padding: 10px;
+  font-family: Fira Code, Consolas, "Courier New", monospace;
+  font-size: 35px;
+  box-shadow: 3px 3px black;
 }
 
 input[type="checkbox"] {
